# bevy-where-was-i

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/tests/: camera.state  identity.state  invalid_file.state  invalid_version.state
examples/: 3d_scene.rs  basic.rs
saves/: camera.state
src/: lib.rs  serialization.rs
