[package]
name = "bevy_where_was_i"
version = "0.1.0"
publish = true
authors = ["Erik Vroon"]
edition = "2024"

[lib]
name = "bevy_where_was_i"
crate-type = ["cdylib", "lib"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.15.3"

[dev-dependencies]
bevy_panorbit_camera = "0.23.0"
