[package]
name = "bevy_where_was_i"
description = "A plugin for Bevy that saves and restores your camera position"
repository = "https://github.com/evroon/bevy-where-was-i"
readme = "README.md"
version = "0.1.0"
publish = true
authors = ["Erik Vroon"]
edition = "2024"
license = "MIT"
keywords = ["bevy", "serialization", "gamedev", "savegame", "plugin"]
categories = ["game-development"]

[lib]
name = "bevy_where_was_i"
crate-type = ["cdylib", "lib"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = {version = "0.15.3", features = []}

[dev-dependencies]
bevy_panorbit_camera = "0.25.0"
