[package]
name = "bevy-where-was-i"
description = "A plugin for Bevy that saves and restores your camera position"
repository = "https://github.com/evroon/bevy-where-was-i"
readme = "README.md"
version = "0.2.0"
publish = true
authors = ["Erik Vroon"]
edition = "2024"
license = "MIT"
keywords = ["bevy", "serialization", "gamedev", "savegame", "plugin"]
categories = ["game-development"]

[dependencies]
bevy = {version = "0.17.2", default-features = false, features = ["bevy_window", "bevy_log"]}

[dev-dependencies]
bevy = {version = "0.17.2", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_window",
    "bevy_render",
]}
bevy_panorbit_camera = "0.28.0"
